<resources>
    <string name="app_name">ProjetoTrabalhoFinal</string>
    <string name="title_add">Adicionar</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_historico">Historico</string>
    <string name="proximos_eventos">Próximos Eventos</string>
    <string name="event_title">Título do Evento</string>
    <string name="description">Descrição</string>
    <string name="save_event">Salvar Evento</string>
    <string name="time">Hora (HH:mm)</string>
    <string name="date">Data (dd/MM/yyyy)</string>
    <string name="past_events">Eventos Passados</string>
    <string name="delete">Deletar</string>
</resources>