<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/fragment_inicio">


    <fragment
        android:id="@+id/fragment_inicio"
        android:name="com.example.projetotrabalhofinal.ui.inicio.InicioFragment"
        android:label="@string/title_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/fragment_add"
        android:name="com.example.projetotrabalhofinal.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/fragment_historico"
        android:name="com.example.projetotrabalhofinal.ui.historico.HistoricoFragment"
        android:label="@string/title_historico"
        tools:layout="@layout/fragment_historico" />
</navigation>